--- a/ghi/src/index.css
+++ b/ghi/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.title {
+  font-weight: bolder;
+  font-size: 5rem;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
+.padding {
+  padding-block: 3rem;
+}
+
+.padding-top {
+  padding-top: 1rem;
+}
